--- a/contact.html
+++ b/contact.html
@@ -1,15 +1,35 @@
-<h3>Contact Me!</h3>
-<p>Gmail: coronellexmarcus@gmail.com</p>
-<p>Contact Number: 09568810732</p>
-<p>
-  Facebook Account:
-  <a href="https://www.facebook.com/profile.php?id=100006111583980"
-    >Lex Coronel</a
-  >
-</p>
-<p>
-  LinkedIn Account:
-  <a href="https://www.linkedin.com/in/lex-marcus-coronel-7000bb243/"
-    >Lex Coronel</a
-  >
-</p>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
+  <body>
+    <h3>Contact Me!</h3>
+    <p>Gmail: coronellexmarcus@gmail.com</p>
+    <p>Contact Number: 09568810732</p>
+    <p>
+      Facebook Account:
+      <a href="https://www.facebook.com/profile.php?id=100006111583980"
+        >Lex Coronel</a
+      >
+    </p>
+    <p>
+      LinkedIn Account:
+      <a href="https://www.linkedin.com/in/lex-marcus-coronel-7000bb243/"
+        >Lex Coronel</a
+      >
+    </p>
+
+    <form action="index.html" method="post">
+      <label for="yourName">Name:</label>
+      <input type="text" name="yourName" />
+      <label for="yourEmail">Email:</label>
+      <input type="email" name="yourEmail" />
+      <button>Submit</button>
+    </form>
+  </body>
+</html>
